--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,26 @@
 * {
-  margin: 0;
+  margin: 0px;
   padding: 0;
+  box-sizing: border-box
 }
 
-p {
-  background-color: tomato;
+.App {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100vw;
+  height: 100vh;
+  border: 1px solid red;
+
+}
+
+.main-content {
+  border: 1px solid red;
+  flex-grow: 1;
+}
+
+.sidebar {
+  border: 1px solid red;
+  width: 30vw;
 }
