--- a/src/App.css
+++ b/src/App.css
@@ -22,15 +22,22 @@
 
 .main-content__chart {
   border: 1px solid #ced4da;
-  padding:20px;
+  height: 500px;
+  width: 1000px;
+  padding: 20px;
   background-color: white;
   display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
 }
 
 .sidebar {
-  width: 350px;
+  width: 400px;
   height: 100vh;
   background-color: white;
   padding: 10px;
-  margin-right: 15px;
+  overflow-y: scroll;
 }
+
