--- a/src/Components/Fieldsets/Fieldsets.css
+++ b/src/Components/Fieldsets/Fieldsets.css
@@ -43,3 +43,10 @@ p {
     right: 85px;
 
 }
+
+.key__checkbox {
+    right: 10px;
+    margin-top: 5px;
+    margin-right: -17px;
+    width: 50px;
+}
