--- a/src/Components/Fieldsets/Fieldsets.css
+++ b/src/Components/Fieldsets/Fieldsets.css
@@ -57,13 +57,24 @@ p {
 }
 
 .field__description {
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
-.field__description form > input {
+.field__description textarea {
     width: 100%;
     height: 150px; 
     line-height: 15px;
     vertical-align: top;
+    border-radius: 7px;
+    border: 1px solid #ced4da;
+    padding-left: 10px;
+    padding-top: 10px;
+    padding-bottom: 3px;
+    margin: 0px;
+}
 
+.field__description textarea:focus {
+    border: 1px solid #5465ff;
+    background-color: #f8f9fa;
+    outline: none;
 }
