--- a/src/App.css
+++ b/src/App.css
@@ -45,8 +45,8 @@
 
 .main-content__chart {
   border: 1px solid #ced4da;
-  width: 800px;
-  padding: 20px;
+  /* width: 800px; */
+  padding: 10px;
   background-color: white;
   display: inline-block;
   display: flex;
