--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,12 @@
 
 .header {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   border-bottom: 1.5px solid #e9ecef;
   height: 3rem;
-  justify-content: center;
-  padding-left: 20px;
+  justify-content: space-between;
+  padding-left: 17px;
+  align-items: center;
 }
 
 .header p {
@@ -18,6 +19,15 @@
   padding-bottom: 5px;
   font-weight: bold;
   color: #6B767D;
+}
+
+.header .download-icon {
+  transition: 0.2s;
+}
+
+.header .download-icon:hover {
+  cursor: pointer;
+  transform: scale(1.2);
 }
 
 .main {
@@ -30,7 +40,7 @@
 
 .navigation {
   background-color: white;
-  width: 50px;
+  width: 55px;
   height: calc(100vh - 3rem);
   border-right: 1.5px solid #e9ecef;
   display: flex;
