switxh update color

--- a/src/Components/Fieldsets/Fieldsets.css
+++ b/src/Components/Fieldsets/Fieldsets.css
@@ -78,3 +78,35 @@ p {
     background-color: #f8f9fa;
     outline: none;
 }
+
+
+.slider {
+    -webkit-appearance: none;
+    width: 150px;
+    height: 5px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.8;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+  }
+
+.slider:hover {
+    opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 15px;
+    height: 15px;
+    background: #04AA6D;
+    cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+    width: 15px;
+    height: 15px;
+    background: #04AA6D;
+    cursor: pointer;
+}
